force-app/main/default/objects/TTS_Disclosure__c/TTS_Disclosure__c.object-meta.xml
<CustomObject>
    <description>Records an initial invention disclosure submitted before formal technology evaluation and protection processing.</description>
    <label>Disclosure</label>
    <nameField>
        <displayFormat>D{0000}</displayFormat>
        <label>Disclosure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>