force-app/main/default/objects/TTS_Disclosure__c/fields/Commercial_Applications__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Applications__c</fullName>
    <description>Documents potential commercial products, services, or uses for the disclosed technology.</description>
    <inlineHelpText>Describe products, services, markets, or other commercial uses enabled by the technology.</inlineHelpText>
    <label>Commercial Applications</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>