force-app/main/default/objects/TTS_Disclosure__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the inventor or researcher who submitted the disclosure.</description>
    <inlineHelpText>Select the Contact who submitted the invention disclosure.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>