force-app/main/default/objects/TTS_Disclosure__c/fields/Current_Protection_Details__c.field-meta.xml
<CustomField>
    <fullName>Current_Protection_Details__c</fullName>
    <description>Documents existing protections associated with the disclosed technology.</description>
    <inlineHelpText>Describe existing protections, registrations, applications, ownership, and relevant references.</inlineHelpText>
    <label>Current Protection Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>