force-app/main/default/objects/TTS_Disclosure__c/fields/Current_Protections__c.field-meta.xml
<CustomField>
    <fullName>Current_Protections__c</fullName>
    <description>Identifies existing intellectual property protections or ownership arrangements related to the disclosure.</description>
    <inlineHelpText>Select all existing protection or ownership categories that apply to the disclosure.</inlineHelpText>
    <label>Current Protections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Copyrighted</fullName>
            </value>
            <value>
                <fullName>Exclusive license</fullName>
            </value>
            <value>
                <fullName>Joint ownership</fullName>
            </value>
            <value>
                <fullName>Non-exclusive license</fullName>
            </value>
            <value>
                <fullName>Patented</fullName>
            </value>
            <value>
                <fullName>Patent pending</fullName>
            </value>
            <value>
                <fullName>Pending evaluation</fullName>
            </value>
            <value>
                <fullName>Public domain</fullName>
            </value>
            <value>
                <fullName>Trademarked</fullName>
            </value>
            <value>
                <fullName>Trade secret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>