force-app/main/default/objects/TTS_Disclosure__c/fields/Disclosure_date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Stores the date the disclosure was submitted to the technology transfer office.</description>
    <inlineHelpText>Enter the date the disclosure was submitted to the technology transfer office.</inlineHelpText>
    <label>Disclosure date</label>
    <type>Date</type>
</CustomField>