force-app/main/default/objects/TTS_Disclosure__c/fields/Disclosure_Description__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Description__c</fullName>
    <description>Provides the rich-text description of the disclosed invention or discovery.</description>
    <inlineHelpText>Explain how the invention works, what it does, and its distinctive features and benefits.</inlineHelpText>
    <label>Disclosure Description</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>