force-app/main/default/objects/TTS_Disclosure__c/fields/Disclosure_Title__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Title__c</fullName>
    <description>Stores the descriptive title of the invention disclosure.</description>
    <inlineHelpText>Enter a brief, descriptive title for the invention or discovery.</inlineHelpText>
    <label>Title</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>