force-app/main/default/objects/TTS_Disclosure__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Stores the external system reference used to identify the disclosure.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the disclosure identifier from the originating external system.</inlineHelpText>
    <label>External ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>