force-app/main/default/objects/TTS_Disclosure__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The funding award that supported the disclosed research. Complements the free-text Funding Source/Details fields with a structured link.</description>
    <inlineHelpText>Select the funding award that supported this disclosure, if known.</inlineHelpText>
    <label>Funding Award</label>
    <referenceTo>TTS_Funding_Award__c</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>