force-app/main/default/objects/TTS_Disclosure__c/fields/Funding_Details__c.field-meta.xml
<CustomField>
    <fullName>Funding_Details__c</fullName>
    <description>Documents funding that supported the research leading to the disclosure.</description>
    <inlineHelpText>Describe funders, awards, contracts, agreements, and any relevant funding obligations.</inlineHelpText>
    <label>Funding Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>