force-app/main/default/objects/TTS_Disclosure__c/fields/Partnership_Collaboration_Details__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Collaboration_Details__c</fullName>
    <description>Documents partnerships or collaborations associated with the disclosed research or its commercialisation.</description>
    <inlineHelpText>Describe current or potential collaborators, their roles, and relevant commercialisation support.</inlineHelpText>
    <label>Partnership/Collaboration Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>