force-app/main/default/objects/TTS_Disclosure__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the disclosure to the Technology record created from or associated with it.</description>
    <inlineHelpText>Select the Technology record created from or associated with this disclosure.</inlineHelpText>
    <label>Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>